--- a/receita-candidatos.ipynb
+++ b/receita-candidatos.ipynb
@@ -16,7 +16,9 @@
     "### A base de dados em questão, foi escolhida para entender como estava distribuida a concentração de receita dos cadidatos por estado.\n",
     "\n",
     "* Os dados utilizados se referem a dados de financiamento de campanha e receita dos candidatos;\n",
-    "* Devido a limitação da extração dos dados só temos registros dos anos de **2010 e 2022** ."
+    "* Devido a limitação da extração dos dados só temos registros dos anos de **2010 e 2022** .\n",
+    "\n",
+    "O foco da pesquisa é ter a informação de como está dividida a concentração de receita entre os estados do país e entre os partidos de cada estado"
    ]
   },
   {
@@ -66,6 +68,7 @@
    "outputs": [],
    "source": [
     "# Importando as bibliotecas necessárias do projeto\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import basedosdados as bd\n",
     "import matplotlib.pyplot as plt"
@@ -81,34 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f5c81b67",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=262006177488-3425ks60hkk80fssi9vpohv88g6q1iqd.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform&state=vSrTVXyDB6qx75ir4CDafF78EPsDZs&access_type=offline\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Downloading:   0%|                                                                        | 0/100000 [00:00<?, ?rows/s]\u001b[A\n",
-      "Downloading:  20%|███████████▋                                              | 20155/100000 [00:12<00:48, 1648.20rows/s]\u001b[A\n",
-      "Downloading:  41%|███████████████████████▉                                  | 41363/100000 [00:23<00:34, 1703.46rows/s]\u001b[A\n",
-      "Downloading:  63%|████████████████████████████████████▎                     | 62559/100000 [00:35<00:21, 1720.26rows/s]\u001b[A\n",
-      "Downloading:  63%|████████████████████████████████████▎                     | 62559/100000 [00:46<00:21, 1720.26rows/s]\u001b[A\n",
-      "Downloading:  83%|████████████████████████████████████████████████          | 82846/100000 [00:47<00:10, 1700.86rows/s]\u001b[A\n",
-      "Downloading: 100%|█████████████████████████████████████████████████████████| 100000/100000 [00:58<00:00, 1710.61rows/s]\u001b[A\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Recebendo a tabela com as informações dos bens de cada candidato (limitado a 5 mil linhas)\n",
     "# df = bd.read_table(dataset_id='br_tse_eleicoes',\n",
@@ -132,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "d70ffc44",
    "metadata": {
     "scrolled": false
@@ -354,7 +335,7 @@
        "[5 rows x 57 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "1c9ce2e1",
    "metadata": {
     "scrolled": true
@@ -436,7 +417,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "a232c38a",
    "metadata": {
     "scrolled": true
@@ -494,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "e1458dd8",
    "metadata": {},
    "outputs": [
@@ -846,7 +827,7 @@
        "[100000 rows x 17 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "899812cf",
    "metadata": {},
    "outputs": [
@@ -885,7 +866,7 @@
        "       'HAMILTON MOREIRA DE ASSIS'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "4421fd07",
    "metadata": {},
    "outputs": [
@@ -936,9 +917,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "b5345158",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -963,7 +946,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,8 +956,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d64e6ffc",
+   "metadata": {},
+   "source": [
+    "- Visualizando alguns dados sobre as informações de receita"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "29dfd4f9",
    "metadata": {},
    "outputs": [
@@ -985,30 +976,313 @@
       "\n",
       "Estatisticas da tabela:\n",
       "\n",
-      "Menor valor de receita: 0.01;\n",
-      "Valor médio de receita: 10996.91;\n",
-      "Valor mediano da receita: 1000.0;\n",
-      "Maior valore de receita: 9481198.17;\n",
-      "\n",
+      "Menor valor de receita: R$ 0.01;\n",
+      "Valor médio de receita: R$ 10996.91;\n",
+      "Maior valore de receita: R$ 9481198.17;\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "valor_min = receitas_candidatos['valor_receita'].min()\n",
-    "valor_medio = receitas_candidatos['valor_receita'].mean()\n",
-    "valor_max = receitas_candidatos['valor_receita'].max()\n",
-    "valor_mediano = receitas_candidatos['valor_receita'].median()\n",
+    "# Guardando em uma lista os valores de receita\n",
+    "valor_receita = list(receitas_candidatos['valor_receita'])\n",
+    "valor_receita.sort()    # Ordenando a lista para facilitar a localizacao dos valores centrais\n",
+    "\n",
+    "valor_min = min(valor_receita)                                # Acessando o menor valor da lista\n",
+    "valor_medio = sum(valor_receita) / len(valor_receita)         # Acessando o valor medio da lista\n",
+    "valor_max = max(valor_receita)                                # Acessando o maior valor da lista\n",
     "\n",
     "print(\"\"\"\n",
     "Estatisticas da tabela:\n",
     "\n",
-    "Menor valor de receita: {};\n",
-    "Valor médio de receita: {:.2f};\n",
-    "Valor mediano da receita: {};\n",
-    "Maior valore de receita: {};\n",
+    "Menor valor de receita: R$ {};\n",
+    "Valor médio de receita: R$ {:.2f};\n",
+    "Maior valore de receita: R$ {};\n",
+    "\"\"\".format(valor_min, valor_medio, valor_max))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346d5bdc",
+   "metadata": {},
+   "source": [
+    "- Agrupando a tabela apenas com as colunas necessárias para o projeto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "eddec9ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ano</th>\n",
+       "      <th>sigla_uf</th>\n",
+       "      <th>sigla_partido</th>\n",
+       "      <th>valor_receita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>163632.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>PC do B</td>\n",
+       "      <td>1149032.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>PDT</td>\n",
+       "      <td>333614.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>PHS</td>\n",
+       "      <td>9085.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>PMDB</td>\n",
+       "      <td>787973.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>PSC</td>\n",
+       "      <td>3062486.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1566126.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>PTB</td>\n",
+       "      <td>536260.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>REDE</td>\n",
+       "      <td>103480.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>REPUBLICANOS</td>\n",
+       "      <td>4293337.94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>316 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ano sigla_uf sigla_partido  valor_receita\n",
+       "0    2010       AC           DEM      163632.87\n",
+       "1    2010       AC       PC do B     1149032.85\n",
+       "2    2010       AC           PDT      333614.19\n",
+       "3    2010       AC           PHS        9085.80\n",
+       "4    2010       AC          PMDB      787973.50\n",
+       "..    ...      ...           ...            ...\n",
+       "311  2022       AM           PSC     3062486.75\n",
+       "312  2022       AM            PT     1566126.98\n",
+       "313  2022       AM           PTB      536260.00\n",
+       "314  2022       AM          REDE      103480.00\n",
+       "315  2022       AM  REPUBLICANOS     4293337.94\n",
+       "\n",
+       "[316 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "receitas_agrupada = receitas_candidatos.groupby(['ano', 'sigla_uf', 'sigla_partido'])['valor_receita'] \\\n",
+    "    .sum().reset_index()\n",
     "\n",
-    "\"\"\".format(valor_min, valor_medio, valor_mediano, valor_max))"
+    "receitas_agrupada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f40820d",
+   "metadata": {},
+   "source": [
+    "# Criando a Busca na Tabela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fa5a679d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Criando a solicitação de pesquisa\n",
+    "def entradaDados():\n",
+    "    \"\"\"\n",
+    "    Funcao vai receber a informacao de qual estado o usuario deseja pesquisar\n",
+    "    \"\"\"\n",
+    "    continuar = True\n",
+    "    while continuar == True:\n",
+    "        # Solicitando o ano que o usuario deseja pesquisar\n",
+    "        try:\n",
+    "            ano = int(input(\"Digite abaixo qual o ano que deseja pesquisar (2010 ou 2022):\\n\"))\n",
+    "        except (TypeError, AttributeError, ValueError) as error:\n",
+    "            print(\"Ocorreu tente novamente:\")\n",
+    "        else:\n",
+    "            continuar = False\n",
+    "    \n",
+    "            # Retornando a tabela contendo apenas o ano informado pelo usuario\n",
+    "            tabela_pesquisa = receitas_agrupada[receitas_agrupada['ano'] == ano]\n",
+    "            \n",
+    "            return tabela_pesquisa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "71685c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando a função que gera a visualização dos dados\n",
+    "def visualizacao():\n",
+    "    tabela = entradaDados()\n",
+    "    \n",
+    "    # Criando o gráfico da doação do portido por estado\n",
+    "    # Gerando os dados do gráfico\n",
+    "    estado = tabela['sigla_uf']                       # label de X\n",
+    "    partido = tabela['sigla_partido']                 # o ax.bar de cada label de X\n",
+    "    receita = tabela['valor_receita']                 # O valor de cada ax.bar\n",
+    "    unico = len(tabela['sigla_partido'].unique())     # Quantidade de barras que serao geradas\n",
+    "    largura = 0.25                                    # largura do ax.bar\n",
+    "    multiplicador = 0\n",
+    "    x = len(estado)    # Localização da legenda X \n",
+    "    \n",
+    "    # Subplotage\n",
+    "    fig, ax = plt.subplots(layout='constrained')\n",
+    "    \n",
+    "    for i in partido:\n",
+    "        desvio = largura * multiplicador\n",
+    "        ajuste = ax.bar(x + desvio, receita, largura, label=partido)\n",
+    "        ax.bar_label(ajuste, padding=unico)\n",
+    "        multiplicador += 1\n",
+    "       \n",
+    "    # Passando os textos dos titulos e das legendas\n",
+    "    ax.set_ylabel('Receita em R$)')\n",
+    "    ax.set_title('Receita de Partidos por Estado')\n",
+    "    ax.set_xticks(x + largura, estado)\n",
+    "    ax.legend(loc='upper left', ncols=unico)\n",
+    "    ax.set_ylim(0, 250)\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8c65bf",
+   "metadata": {},
+   "source": [
+    "# TESTES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93757d80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite abaixo qual o ano que deseja pesquisar (2010 ou 2022):\n",
+      "2010\n"
+     ]
+    }
+   ],
+   "source": [
+    "tabela = entradaDados()\n",
+    "\n",
+    "estado = tabela['sigla_uf']                       # label de X\n",
+    "partido = tabela['sigla_partido']                 # o ax.bar de cada label de X\n",
+    "receita = tabela['valor_receita']                 # O valor de cada ax.bar\n",
+    "unico = len(tabela['sigla_partido'].unique())     # Quantidade de barras que serao geradas\n",
+    "largura = 0.25                                    # largura do ax.bar\n",
+    "multiplicador = 0\n",
+    "x = np.arange(len(estado))    # Localização da legenda X \n",
+    "\n",
+    "# Subplotage\n",
+    "fig, ax = plt.subplots(layout='constrained')\n",
+    "\n",
+    "for i in partido:\n",
+    "    desvio = largura * multiplicador\n",
+    "    ajuste = ax.bar(x + desvio, receita, largura, label=partido)\n",
+    "    ax.bar_label(ajuste, padding=unico)\n",
+    "    multiplicador += 1\n",
+    "\n",
+    "# Passando os textos dos titulos e das legendas\n",
+    "ax.set_ylabel('Receita em R$)')\n",
+    "ax.set_title('Receita de Partidos por Estado')\n",
+    "ax.set_xticks(x + largura, estado)\n",
+    "ax.legend(loc='upper left', ncols=unico)\n",
+    "ax.set_ylim(0, 250)\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
