Ajustando funcao de busca (Imcompleta)

--- a/receita-candidatos.ipynb
+++ b/receita-candidatos.ipynb
@@ -70,7 +70,7 @@
     "# Importando as bibliotecas necessárias do projeto\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import basedosdados as bd\n",
+    "# import basedosdados as bd\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -115,10 +115,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d70ffc44",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\202212008241\\AppData\\Local\\Temp\\4\\ipykernel_18424\\877588594.py:1: DtypeWarning: Columns (16,24,29,30,33,34,36,37,38,41,50,51,52,53,54,57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  receitas_candidatos = pd.read_csv('./amostra/dados_receita_candidatos.csv', index_col=0)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1155,134 +1161,243 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6d5d6615-96ed-4f2c-bf16-095810fae693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "receitas_agrupada.to_csv('./amostra/receitas_agrupadas.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "aed7bfc2-c1c0-460f-875b-e51edccd730a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('./amostra/receitas_agrupadas.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "46787f58-8f32-4ec2-ae32-2937170b8af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(316, 4)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f87c2a75-4c7c-4758-855a-984989401e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ano</th>\n",
+       "      <th>valor_receita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>316.000000</td>\n",
+       "      <td>3.160000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2012.164557</td>\n",
+       "      <td>3.463392e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.621359</td>\n",
+       "      <td>7.325840e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>5.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>1.960528e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>8.523565e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>3.106918e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>6.725686e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               ano  valor_receita\n",
+       "count   316.000000   3.160000e+02\n",
+       "mean   2012.164557   3.463392e+06\n",
+       "std       4.621359   7.325840e+06\n",
+       "min    2010.000000   5.000000e+01\n",
+       "25%    2010.000000   1.960528e+05\n",
+       "50%    2010.000000   8.523565e+05\n",
+       "75%    2010.000000   3.106918e+06\n",
+       "max    2022.000000   6.725686e+07"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0f40820d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Criando a Busca na Tabela"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "fa5a679d",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "# Criando a solicitação de pesquisa\n",
-    "def entradaDados():\n",
+    "# Criando a fun\n",
+    "def entradaDados() -> list:\n",
     "    \"\"\"\n",
-    "    Funcao vai receber a informacao de qual estado o usuario deseja pesquisar\n",
-    "    \"\"\"\n",
-    "    continuar = True\n",
-    "    while continuar == True:\n",
-    "        # Solicitando o ano que o usuario deseja pesquisar\n",
-    "        try:\n",
-    "            ano = int(input(\"Digite abaixo qual o ano que deseja pesquisar (2010 ou 2022):\\n\"))\n",
-    "        except (TypeError, AttributeError, ValueError) as error:\n",
-    "            print(\"Ocorreu tente novamente:\")\n",
-    "        else:\n",
-    "            continuar = False\n",
+    "    Funcao que solicita 3 informacoes sobre a busca desejada:\n",
+    "    ano -> Int\n",
+    "    uf -> String\n",
+    "    partido -> String\n",
     "    \n",
-    "            # Retornando a tabela contendo apenas o ano informado pelo usuario\n",
-    "            tabela_pesquisa = receitas_agrupada[receitas_agrupada['ano'] == ano]\n",
-    "            \n",
-    "            return tabela_pesquisa"
+    "    \"\"\"\n",
+    "    # Recebendo os dados de busca\n",
+    "    try:\n",
+    "        ano = input(\"Informe o ano que deseja buscar: \")\n",
+    "        uf = input(\"Informe a sigla do estado que deseja buscar: \")\n",
+    "        partido = input(\"Informe a sigla do partido que deseja buscar: \")\n",
+    "    \n",
+    "    except (TypeError, NameError, ValueError) as error:\n",
+    "        print(\"Ocorreu um erro, tente novamente:\\n{}\".format(error))\n",
+    "        \n",
+    "    else:\n",
+    "        # Criando uma lista para salvar as informacoes recebidos\n",
+    "        lista = list()\n",
+    "        \n",
+    "        # Inserindo as informacoes na mesma ordem que foram solicitadas\n",
+    "        lista.append(ano)\n",
+    "        lista.append(uf)\n",
+    "        lista.append(partido)\n",
+    "        \n",
+    "        \n",
+    "        return  lista # O retorno do valor das variaveis segue a mesma ordem do solicitacao e a ordem que sera solicitado na funcao seguinte\n",
+    "        \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "71685c34",
+   "execution_count": 43,
+   "id": "ccb810f9-f319-4a58-a6df-0960ace56a1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Criando a função que gera a visualização dos dados\n",
-    "def visualizacao():\n",
-    "    tabela = entradaDados()\n",
+    "def pesquisa():\n",
+    "    \"\"\"\n",
+    "    Recebe as informacao recebidas na funcao anterior\n",
+    "    e retorna uma tabela\n",
+    "    \"\"\"\n",
+    "    # Rebendo as informacoes\n",
+    "    parametros = entradaDados()    # Passando a lista com as informacoes de busca para uma variavel \n",
     "    \n",
-    "    # Criando o gráfico da doação do portido por estado\n",
-    "    # Gerando os dados do gráfico\n",
-    "    estado = tabela['sigla_uf']                       # label de X\n",
-    "    partido = tabela['sigla_partido']                 # o ax.bar de cada label de X\n",
-    "    receita = tabela['valor_receita']                 # O valor de cada ax.bar\n",
-    "    unico = len(tabela['sigla_partido'].unique())     # Quantidade de barras que serao geradas\n",
-    "    largura = 0.25                                    # largura do ax.bar\n",
-    "    multiplicador = 0\n",
-    "    x = len(estado)    # Localização da legenda X \n",
     "    \n",
-    "    # Subplotage\n",
-    "    fig, ax = plt.subplots(layout='constrained')\n",
     "    \n",
-    "    for i in partido:\n",
-    "        desvio = largura * multiplicador\n",
-    "        ajuste = ax.bar(x + desvio, receita, largura, label=partido)\n",
-    "        ax.bar_label(ajuste, padding=unico)\n",
-    "        multiplicador += 1\n",
+    "    # Pesquisando na tabela\n",
+    "    df_busca = df[(df.ano == int(parametros[0])) &        # Passando o valor do ano e tornando o parametro em um valor inteiro\n",
+    "                  (df.sigla_uf == parametros[1]) &        # Passando o valor do UF\n",
+    "                  (df.sigla_partido == parametros[2])]    # Passando o valor da Sigla do partido\n",
+    "    \n",
+    "    return df_busca\n",
     "       \n",
-    "    # Passando os textos dos titulos e das legendas\n",
-    "    ax.set_ylabel('Receita em R$)')\n",
-    "    ax.set_title('Receita de Partidos por Estado')\n",
-    "    ax.set_xticks(x + largura, estado)\n",
-    "    ax.legend(loc='upper left', ncols=unico)\n",
-    "    ax.set_ylim(0, 250)\n",
-    "\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ef8c65bf",
-   "metadata": {},
-   "source": [
-    "# TESTES"
+    "     \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "93757d80",
+   "execution_count": 47,
+   "id": "8bf51714-86ad-4c4f-8bb8-86d1bd494e2d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite abaixo qual o ano que deseja pesquisar (2010 ou 2022):\n",
-      "2010\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([2010, 2022], dtype=int64)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tabela = entradaDados()\n",
-    "\n",
-    "estado = tabela['sigla_uf']                       # label de X\n",
-    "partido = tabela['sigla_partido']                 # o ax.bar de cada label de X\n",
-    "receita = tabela['valor_receita']                 # O valor de cada ax.bar\n",
-    "unico = len(tabela['sigla_partido'].unique())     # Quantidade de barras que serao geradas\n",
-    "largura = 0.25                                    # largura do ax.bar\n",
-    "multiplicador = 0\n",
-    "x = np.arange(len(estado))    # Localização da legenda X \n",
-    "\n",
-    "# Subplotage\n",
-    "fig, ax = plt.subplots(layout='constrained')\n",
-    "\n",
-    "for i in partido:\n",
-    "    desvio = largura * multiplicador\n",
-    "    ajuste = ax.bar(x + desvio, receita, largura, label=partido)\n",
-    "    ax.bar_label(ajuste, padding=unico)\n",
-    "    multiplicador += 1\n",
-    "\n",
-    "# Passando os textos dos titulos e das legendas\n",
-    "ax.set_ylabel('Receita em R$)')\n",
-    "ax.set_title('Receita de Partidos por Estado')\n",
-    "ax.set_xticks(x + largura, estado)\n",
-    "ax.legend(loc='upper left', ncols=unico)\n",
-    "ax.set_ylim(0, 250)\n",
-    "\n",
-    "plt.show()"
+    "df.ano.unique()"
    ]
   }
  ],
